--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ all:
 	jar cvfe Main.jar Main *.class
 
 run: Main.jar
-	java -cp Main.jar;classes12.jar;hb15.jar Main
+	java -cp Main.jar:classes12.jar Main
 clean:
 	rm -f *.class
 	rm -f Main.jar
