--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,14 @@
+ifeq ($(OS),Windows_NT)
+all:
+	javac -cp "classes12.jar" Main.java Tuple.java
+	jar cvfe Main.jar Main *.class
+
+run: Main.jar
+	java -cp Main.jar;classes12.jar Main
+clean:
+	rm -f *.class
+	rm -f Main.jar
+else
 all:
 	javac -cp "classes12.jar" Main.java Tuple.java
 	jar cvfe Main.jar Main *.class
@@ -7,3 +18,6 @@ run: Main.jar
 clean:
 	rm -f *.class
 	rm -f Main.jar
+endif
+
+
