--- a/src/Makefile
+++ b/src/Makefile
@@ -6,8 +6,8 @@ all:
 run: Main.jar
 	java -cp Main.jar;classes12.jar Main
 clean:
-	rm -f *.class
-	rm -f Main.jar
+	del *.class
+	del Main.jar
 else
 all:
 	javac -cp "classes12.jar" Main.java Tuple.java
